# ECON-124

./: .gitignore  main.py  pyproject.toml
docs/chapter-1/: chapter-1.tex
homeworks/final/: final.ipynb  final.tex
homeworks/homework-01/: homework-01.tex
homeworks/homework-02/: homework-02.tex  scratch.ipynb
homeworks/homework-02/code/: reg2.py  reg3.py  reg5.py
homeworks/homework-02/data/: Koop_Tobias_subsample.xlsx  cps09mar.xlsx
homeworks/homework-03/: homework-03.tex  scratch.ipynb
homeworks/homework-03/code/: code_1.py  code_2.py  code_3.py  code_4.py
homeworks/homework-03/data/: Nerlove1963.csv  description_koop_tobias.txt  timeinvar.xlsx
homeworks/homework-04/: Homework 4.ipynb  homework-04.tex  scratch1.ipynb  scratch2.ipynb  scratch3.ipynb  scratch4.ipynb
homeworks/homework-04/data/: MONEYDEM-1.xls  QUARTERLY-1.xls  SIM_2-1.xls  us_macro_quarterly-1.xlsx
homeworks/midterm-02/: midterm-02.tex  scratch.ipynb  scratch1.ipynb  scratch2.ipynb  scratch3.ipynb  scratch4.ipynb  scratch5.ipynb
homeworks/midterm-02/code/: prob1a.py  prob1b.py  prob1c.py  prob2ai.py  prob2aii.py  prob2bi.py  prob2bii.py  prob2biii.py  prob2ci.py  prob2cii.py  prob2di.py  prob2dii.py  prob2diii.py  prob3a.py  prob3b.py  prob3c.py  prob3d.py  prob3e.py  prob4.py  prob5.py
homeworks/midterm-02/data/: CASchools2.xlsx  Consumption.xlsx  Consumption_description.docx  fertil2.xlsx  timevar-1.xlsx
notebooks/chapter-05/: chapter-05.tex
